--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -1,3 +1,6 @@
+$color__font__main: #f2f2f2;
+$color__secondary: #49C4FF;
+
 @mixin for-size($range) {
   $phone-upper-boundary: 600px;
   $tablet-portrait-upper-boundary: 900px;
@@ -17,39 +20,134 @@
   }
 }
 
-@mixin layoutMaxWidth {
-  margin: auto;
-  width: 100%;
-  max-width: 1000px;
+@mixin layoutColumns {
+  display: grid;
+  grid-template-columns: 1fr repeat(10,1fr) 1fr;
+}
 
-  @include for-size(phone-only) {
-    
-  }
+@mixin gradientBackground {
+  background: linear-gradient(89.93deg, #48C8FF 0.1%, #5182FF 22.99%, #4735FF 46.92%, #7932FF 72.93%, #9D00FF 99.98%);
 }
 
 .main {
     font-family: 'Montserrat', sans-serif;
 }
 
+.button {
+  background-color: $color__secondary;
+  padding: 0.75rem 1.25rem;
+  font-size: 1.5rem;
+  color: $color__font__main;
+  text-decoration: none;
+  filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.15));
+}
+
 .header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 2rem 0;
+  z-index: 1;
+  @include layoutColumns;
+  
+
   &__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    @include layoutMaxWidth;
+    grid-column: 2/12;
   } 
 
   &__icons {
+    svg {
+      width: 35px;
+    }
+
     a+a {
-      padding-left: 2rem;
+      padding-left: 1.5rem;
     }
   }
 
   &__navigation {
     &__link {
+      font-size: 1.5rem;
+      font-weight: 300;
+      letter-spacing: 1px;
+      color: $color__font__main;
+      text-decoration: none;
+
       +.header__navigation__link {
-        padding-left: 2rem;
+        margin-left: 2rem;
       }
+    }
+  }
+}
+
+.hero {
+  height: 90vh;
+  width: 100%;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+  @include layoutColumns;
+  @include gradientBackground;
+
+  &__content {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    color: $color__font__main;
+    grid-column: 2/12;
+
+      h1 {
+        font-weight: 200;
+        font-size: 2rem;
+        letter-spacing: 1px;
+        margin: 0 0 1rem 0;
+      }
+
+      h2 {
+        font-weight: 200;
+        font-size: 3.5rem;
+        letter-spacing: 2px;
+        margin: 0 0 3rem 0;
+      }
+
+      svg {
+        position: absolute;
+        right: 0;
+        width: 50%;
+      }
+  }
+} 
+
+.about {
+  padding: 6rem 0;
+  @include layoutColumns;
+
+  &__watermark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: $color__font__main;
+    opacity: 0.17;
+    text-shadow: 35px 4px 16px rgba(0, 0, 0, 0.04);
+    font-size: 10rem;
+    margin: 0;
+  }
+
+  &__content {
+    grid-column: 1/12;
+    display: grid;
+    grid-template-columns: repeat(11,1fr);
+    @include gradientBackground;
+
+    &__text {
+      padding: 5rem 0;
+      grid-column: 2/8;
+      position: relative;
     }
   }
 }
