--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -133,21 +133,67 @@ $color__secondary: #49C4FF;
     left: 0;
     color: $color__font__main;
     opacity: 0.17;
-    text-shadow: 35px 4px 16px rgba(0, 0, 0, 0.04);
-    font-size: 10rem;
+    text-shadow: 35px 4px 16px rgba(0, 0, 0, 0.2);
+    font-size: 12rem;
     margin: 0;
+    font-weight: 700;
+    pointer-events: none;
   }
 
   &__content {
     grid-column: 1/12;
     display: grid;
     grid-template-columns: repeat(11,1fr);
+    align-items: flex-end;
     @include gradientBackground;
 
     &__text {
       padding: 5rem 0;
       grid-column: 2/8;
       position: relative;
+      color: $color__font__main; 
+      width: 80%;
+
+      h3 {
+        margin-bottom: 0;
+        font-size: 1.785rem;
+      }
+
+      h4 {
+        margin: 0.25rem 0 4rem 0;
+        font-weight: 300;
+      }
+
+      p {
+        &:last-of-type {
+          margin: 0;
+        }
+      }
     }
+
+    &__image {
+      grid-column: 8/12;
+
+      svg {
+        width: 60%;
+      }
+    }
+  }
+}
+
+.projects {
+  @include layoutColumns;
+
+  &__title {
+    grid-column: 2/12;
+    @include gradientBackground;
+    text-align: left;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-size: 12rem;
+    font-weight: 700;
+    margin: 0;
+    text-indent: -14px;
   }
 }
