--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -196,4 +196,144 @@ $color__secondary: #49C4FF;
     margin: 0;
     text-indent: -14px;
   }
+
+  &__tile {
+    grid-column: 2/13;
+    display: grid;
+    grid-template-columns: repeat(11,1fr);
+    @include gradientBackground;
+    padding: 4rem 0 4rem 4rem;
+    margin: 2rem 0;
+
+    &:first-of-type {
+      margin: 5rem 0 2rem 0;
+    }
+
+    &:nth-of-type(2n) {
+      grid-column: 1/12;
+      padding: 4rem 4rem 4rem 0;
+
+      .projects__tile__content {
+        flex-direction: row-reverse;
+      }
+    }
+
+    &__content {
+      grid-column: 1/12;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &__image {
+      width: 50%;
+    }
+
+    &__text {
+      width: 50%;
+      color: $color__font__main;
+      padding: 0 4rem;
+
+      h3 {
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+
+.contact {
+  @include layoutColumns;
+  margin-top: 4rem;
+  padding: 10rem 0 5rem 0;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
+  clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
+  @include gradientBackground;
+  height: 100vh;
+
+  &__content {
+    grid-column: 2/12;
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+
+    &__title {
+      grid-column: 1/10;
+      color: $color__font__main;
+      opacity: 0.17;
+      text-shadow: 35px 4px 16px rgba(0, 0, 0, 0.2);
+      font-size: 12rem;
+      margin: 0;
+      font-weight: 700;
+      pointer-events: none;
+    }
+
+    &__form {
+      grid-column: 1/5;
+      
+      .form {
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+
+        &__name, &__email, &__message {
+          display: flex;
+          flex-direction: column;
+
+          label {
+            color: $color__font__main;
+            font-size: 1.5rem;
+            margin-bottom: 0.5rem;
+          }
+
+          input, textarea {
+            padding: 1rem;
+            border: 1px solid $color__font__main;
+            border-radius: 4px;
+            background-color: unset;
+            margin-bottom: 0.75rem;
+          }
+        }
+
+        &__submit {
+          input {
+            border: none;
+            margin-top: 0.5rem;
+          }
+        }
+      }
+    }
+
+    &__img {
+      grid-column: 6/10;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      svg {
+        height: 100%;
+      }
+    }
+  }
+}
+
+.footer {
+  @include gradientBackground;
+  @include layoutColumns;
+  margin-top: -1px;
+  padding-bottom: 2rem;
+
+  &__icons {
+    grid-column: 2/12;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    svg {
+      width: 35px;
+    }
+
+    svg+svg {
+      padding-left: 1rem;
+    }
+  }
 }
