--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -35,11 +35,16 @@ $color__secondary: #49C4FF;
 
 .button {
   background-color: $color__secondary;
-  padding: 0.75rem 1.25rem;
-  font-size: 1.5rem;
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
   color: $color__font__main;
   text-decoration: none;
   filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.15));
+
+  @include for-size(tablet-landscape-up) {
+    font-size: 1.5rem;
+    padding: 0.75rem 1.25rem;
+  }
 }
 
 .header {
@@ -61,36 +66,56 @@ $color__secondary: #49C4FF;
 
   &__icons {
     svg {
-      width: 35px;
+      width: 25px;
+
+      @include for-size(tablet-landscape-up) {
+        width: 35px;
+      }
     }
 
     a+a {
-      padding-left: 1.5rem;
+      padding-left: 1rem;
+
+      @include for-size(tablet-landscape-up) {
+        padding-left: 1.5rem;
+      }
     }
   }
 
   &__navigation {
     &__link {
-      font-size: 1.5rem;
+      font-size: 1rem;
       font-weight: 300;
       letter-spacing: 1px;
       color: $color__font__main;
       text-decoration: none;
 
+      @include for-size(tablet-landscape-up) {
+        font-size: 1.5rem;
+      }
+
       +.header__navigation__link {
-        margin-left: 2rem;
+        margin-left: 1rem;
+
+        @include for-size(tablet-landscape-up) {
+          margin-left: 2rem;
+        }
       }
     }
   }
 }
 
 .hero {
-  height: 90vh;
+  height: 70vh;
   width: 100%;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
   @include layoutColumns;
   @include gradientBackground;
+
+  @include for-size(tablet-landscape-up) {
+    height: 90vh;
+  }
 
   &__content {
     position: relative;
@@ -103,29 +128,50 @@ $color__secondary: #49C4FF;
 
       h1 {
         font-weight: 200;
-        font-size: 2rem;
+        font-size: 1rem;
         letter-spacing: 1px;
-        margin: 0 0 1rem 0;
+        margin: 0 0 0.5rem 0;
+
+        @include for-size(tablet-landscape-up) {
+          font-size: 1.5rem;
+          margin-bottom: 1rem;
+        }
       }
 
       h2 {
         font-weight: 200;
-        font-size: 3.5rem;
+        font-size: 2rem;
         letter-spacing: 2px;
-        margin: 0 0 3rem 0;
+        margin: 0 0 2rem 0;
+
+        @include for-size(tablet-landscape-up) {
+          font-size: 3.5rem;
+          margin: 0 0 3rem 0;
+        }
       }
 
       svg {
         position: absolute;
         right: 0;
-        width: 50%;
+        width: 75%;
+        opacity: 0.1;
+        
+        @include for-size(tablet-landscape-up) {
+          width: 50%;
+          opacity: 1;
+        }
       }
   }
 } 
 
 .about {
-  padding: 6rem 0;
+  padding: 2rem 0;
+  overflow: hidden;
   @include layoutColumns;
+
+  @include for-size(tablet-landscape-up) {
+    padding: 6rem 0;
+  }
 
   &__watermark {
     position: absolute;
@@ -141,18 +187,27 @@ $color__secondary: #49C4FF;
   }
 
   &__content {
-    grid-column: 1/12;
+    grid-column: 1/13;
     display: grid;
     grid-template-columns: repeat(11,1fr);
     align-items: flex-end;
     @include gradientBackground;
 
+    @include for-size(tablet-landscape-up) {
+      grid-column: 1/12;
+    }
+
     &__text {
       padding: 5rem 0;
-      grid-column: 2/8;
+      grid-column: 2/12;
+      grid-row: 1;
       position: relative;
       color: $color__font__main; 
       width: 80%;
+
+      @include for-size(tablet-landscape-up) {
+        grid-column: 2/8;
+      }
 
       h3 {
         margin-bottom: 0;
@@ -172,16 +227,29 @@ $color__secondary: #49C4FF;
     }
 
     &__image {
-      grid-column: 8/12;
+      grid-column: 1/12;
+      opacity: 0.2;
+      grid-row: 1;
+
+      @include for-size(tablet-landscape-up) {
+        grid-column: 8/12;
+      }
 
       svg {
-        width: 60%;
+        width: 50%;
+        display: block;
+        margin: auto;
+
+        @include for-size(tablet-landscape-up) {
+          width: 60%;
+        }
       }
     }
   }
 }
 
 .projects {
+  overflow: hidden;
   @include layoutColumns;
 
   &__title {
@@ -191,10 +259,14 @@ $color__secondary: #49C4FF;
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
-    font-size: 12rem;
+    font-size: 4rem;
     font-weight: 700;
     margin: 0;
-    text-indent: -14px;
+
+    @include for-size(tablet-landscape-up) {
+      font-size: 12rem;
+      text-indent: -14px;
+    }
   }
 
   &__tile {
@@ -202,78 +274,140 @@ $color__secondary: #49C4FF;
     display: grid;
     grid-template-columns: repeat(11,1fr);
     @include gradientBackground;
-    padding: 4rem 0 4rem 4rem;
-    margin: 2rem 0;
+    padding: 2rem 1rem;
+    margin: 1rem 0;
+
+    @include for-size(tablet-landscape-up) {
+      margin: 2rem 0;
+      padding: 4rem 0 4rem 4rem;
+    }
 
     &:first-of-type {
-      margin: 5rem 0 2rem 0;
+      margin: 2rem 0;
+
+      @include for-size(tablet-landscape-up) {
+        margin: 5rem 0 2rem 0;
+      }
     }
 
     &:nth-of-type(2n) {
       grid-column: 1/12;
-      padding: 4rem 4rem 4rem 0;
+      padding: 2rem 1rem;
+
+      @include for-size(tablet-landscape-up) {
+        padding: 4rem 4rem 4rem 0;
+      }
 
       .projects__tile__content {
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
+
+        @include for-size(tablet-landscape-up) {
+          flex-direction: row-reverse;
+        }
       }
     }
 
     &__content {
       grid-column: 1/12;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      flex-direction: column-reverse;
+
+      @include for-size(tablet-landscape-up) {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+      }
     }
 
     &__image {
-      width: 50%;
+      width: 100%;
+
+      @include for-size(tablet-landscape-up) {
+        width: 50%;
+      }
     }
 
     &__text {
-      width: 50%;
+      width: 100%;
       color: $color__font__main;
-      padding: 0 4rem;
+      
+
+      @include for-size(tablet-landscape-up) {
+        padding: 0 4rem;
+        width: 50%;
+      }
 
       h3 {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
+        margin-top: 0;
+
+        @include for-size(tablet-landscape-up) {
+          font-size: 1.5rem;
+          margin-top: unset;
+        }
       }
     }
   }
 }
 
 .contact {
+  overflow: hidden;
   @include layoutColumns;
   margin-top: 4rem;
-  padding: 10rem 0 5rem 0;
+  padding: 6rem 0 0 0;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
   clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
   @include gradientBackground;
-  height: 100vh;
+  height: 75vh;
+
+  @include for-size(tablet-landscape-up) {
+    height: 100vh;
+    padding: 10rem 0 5rem 0;
+  }
 
   &__content {
     grid-column: 2/12;
     display: grid;
     grid-template-columns: repeat(10,1fr);
+    grid-template-rows: 1fr 4fr;
+
+    @include for-size(tablet-landscape-up) {
+      grid-template-rows: unset;
+    }
 
     &__title {
       grid-column: 1/10;
       color: $color__font__main;
-      opacity: 0.17;
+      opacity: 0.4;
       text-shadow: 35px 4px 16px rgba(0, 0, 0, 0.2);
-      font-size: 12rem;
+      font-size: 4rem;
       margin: 0;
       font-weight: 700;
       pointer-events: none;
+
+      @include for-size(tablet-landscape-up) {
+        font-size: 12rem;
+        opacity: 0.17;
+      }
     }
 
     &__form {
-      grid-column: 1/5;
+      grid-column: 1/12;
+
+      @include for-size(tablet-landscape-up) {
+        grid-column: 1/5;
+      }
       
       .form {
-        height: 100%;
+        height: unset;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
         flex-direction: column;
+        
+        @include for-size(tablet-landscape-up) {
+          justify-content: space-around;
+          height: 100%;
+        }
 
         &__name, &__email, &__message {
           display: flex;
@@ -281,16 +415,24 @@ $color__secondary: #49C4FF;
 
           label {
             color: $color__font__main;
-            font-size: 1.5rem;
+            font-size: 1rem;
             margin-bottom: 0.5rem;
+
+            @include for-size(tablet-landscape-up) {
+              font-size: 1.5rem;
+            }
           }
 
           input, textarea {
-            padding: 1rem;
+            padding: 0.5rem;
             border: 1px solid $color__font__main;
             border-radius: 4px;
             background-color: unset;
             margin-bottom: 0.75rem;
+
+            @include for-size(tablet-landscape-up) {
+              padding: 1rem;
+            }
           }
         }
 
@@ -305,9 +447,13 @@ $color__secondary: #49C4FF;
 
     &__img {
       grid-column: 6/10;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      display: none;
+
+      @include for-size(tablet-landscape-up) {
+        display: flex;
+        align-items: center;
+        justify-content: center; 
+      }
 
       svg {
         height: 100%;
