--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -34,17 +34,27 @@ $color__secondary: #49C4FF;
 }
 
 .button {
-  background-color: $color__secondary;
+  cursor: pointer;
+  background-image: linear-gradient(to top, #4735FF 50%,$color__secondary 50%);
+  background-size: 100% 200%;
+  background-position: 0 5%;
   padding: 0.5rem 0.75rem;
   font-size: 1rem;
   color: $color__font__main;
   text-decoration: none;
   filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.15));
+  transition: background-position 0.3s ease, border-radius 0.3s ease;
 
   @include for-size(tablet-landscape-up) {
     font-size: 1.5rem;
     padding: 0.75rem 1.25rem;
   }
+
+  &:hover {
+    background-position: 0 100%;
+    border-radius: 5px;
+  }
+
 }
 
 .header {
@@ -517,9 +527,18 @@ $color__secondary: #49C4FF;
 
     svg {
       width: 35px;
+      transition: 0.2s ease-out;
     }
 
-    svg+svg {
+    a {
+      &:hover {
+        svg {
+          transform: scale(1.15);
+        }
+      }
+    }
+
+    a+a {
       padding-left: 1rem;
     }
   }
