--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -43,13 +43,15 @@ html {
 
 .button {
   cursor: pointer;
-  background-image: linear-gradient(to top, #4735FF 50%,$color__secondary 50%);
+  background-image: linear-gradient(to top, $color__secondary 50%,#4735FF 50%);
   background-size: 100% 200%;
   background-position: 0 0;
   padding: 0.5rem 0.75rem;
-  font-size: 1rem;
+  font-size: 1rem; 
+  font-weight: 500;
   color: $color__font__main;
   text-decoration: none;
+  border-radius: 5px;
   filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.15));
   transition: background-position 0.3s ease, border-radius 0.3s ease;
 
@@ -60,7 +62,6 @@ html {
 
   &:hover {
     background-position: 0 100%;
-    border-radius: 5px;
   }
 
 }
@@ -172,48 +173,55 @@ html {
 
   &__content {
     position: relative;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
+    justify-items: center;
     height: 100%;
     color: $color__font__main;
     grid-column: 2/12;
 
-      h1 {
-        font-weight: 200;
-        font-size: 1rem;
-        letter-spacing: 1px;
-        margin: 0 0 0.5rem 0;
+    &__text {
+      padding-right: 6em;
+    }
 
-        @include for-size(tablet-landscape-up) {
-          font-size: 1.5rem;
-          margin-bottom: 1rem;
-        }
+    h1 {
+      font-weight: 200;
+      font-size: 1rem;
+      letter-spacing: 2px;
+      margin: 0 0 0.5rem 0;
+
+      @include for-size(tablet-landscape-up) {
+        font-size: 3.5rem;
+        margin-bottom: 2rem;
+        font-weight: 700;
+        line-height: 0.9;
       }
+    }
 
-      h2 {
-        font-weight: 200;
-        font-size: 2rem;
-        letter-spacing: 2px;
-        margin: 0 0 2rem 0;
+    h2 {
+      font-weight: 200;
+      font-size: 2rem;
+      letter-spacing: 0px;
+      margin: 0 0 2rem 0;
 
-        @include for-size(tablet-landscape-up) {
-          font-size: 3.5rem;
-          margin: 0 0 3rem 0;
-        }
+      @include for-size(tablet-landscape-up) {
+        font-size: 1.75rem;
+        margin: 0 0 3rem 0;
       }
+    }
 
-      svg {
-        position: absolute;
-        right: 0;
-        width: 75%;
-        opacity: 0.1;
-        
-        @include for-size(desktop-up) {
-          width: 50%;
-          opacity: 1;
-        }
+    svg {
+      position: absolute;
+      right: 0;
+      width: 75%;
+      opacity: 0.1;
+      
+      @include for-size(desktop-up) {
+        width: 50%;
+        opacity: 0.8;
       }
+    }
   }
 } 
 
@@ -246,10 +254,6 @@ html {
     align-items: flex-end;
     @include gradientBackground;
 
-    @include for-size(tablet-landscape-up) {
-      grid-column: 1/12;
-    }
-
     &__text {
       padding: 5rem 0;
       grid-column: 2/12;
@@ -263,13 +267,8 @@ html {
       }
 
       h3 {
-        margin-bottom: 0;
+        margin: 1rem 0 4rem 0;
         font-size: 1.785rem;
-      }
-
-      h4 {
-        margin: 0.25rem 0 4rem 0;
-        font-weight: 300;
       }
 
       p {
@@ -281,13 +280,14 @@ html {
 
     &__image {
       grid-column: 1/12;
-      opacity: 0.2;
+      opacity: 0.7;
       grid-row: 1;
       display: none;
 
       @include for-size(tablet-landscape-up) {
         grid-column: 8/12;
         display: block;
+        margin: auto;
       }
 
       svg {
@@ -296,7 +296,8 @@ html {
         margin: auto;
 
         @include for-size(tablet-landscape-up) {
-          width: 60%;
+          width: 100%;
+          height: auto;
         }
       }
     }
