--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -176,7 +176,6 @@ html {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    justify-items: center;
     height: 100%;
     color: $color__font__main;
     grid-column: 2/12;
@@ -201,17 +200,18 @@ html {
 
     h2 {
       font-weight: 200;
-      font-size: 2rem;
+      font-size: 1rem;
       letter-spacing: 0px;
       margin: 0 0 2rem 0;
 
       @include for-size(tablet-landscape-up) {
-        font-size: 1.75rem;
+        font-size: 2rem;
         margin: 0 0 3rem 0;
       }
     }
 
     svg {
+      will-change: auto;
       position: absolute;
       right: 0;
       width: 75%;
